# Hongkong_Solitaire

./: .gitignore  LICENSE  hongkong.ini  hongkong_solitaire.py  pyproject.toml  readme.md
src/hongkongsol_Jonson26/: hongkongsol.py
src/hongkongsol_Jonson26.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hongkongsol_Jonson26/util/: card.py  settings.py  ui.py
util/: about.py  spritesheet.py
